# knowledge_compendium

./: .gitignore  Dockerfile  README.md  entrypoint.sh  manage_containers_service.py  pyproject.toml  requirements.txt
datasets/: astar_dataset.ipynb
datasets/astar_dataset/: __init__.py  astar_dataset.py
knowledge_compendium/: _config.yml  _toc.yml  intro.md
knowledge_compendium/algorithms_and_datastructures/: algorithms.ipynb  algorithms_illumintated_p1.ipynb  cheat_sheet.ipynb  divide_and_conquer.ipynb  graphs.ipynb  intro.md  plotting_example.ipynb
knowledge_compendium/control_barrier_functions/: CLF-CBF-QP-controller_example.ipynb  clf_cbf_qp_controller.md  control_barrier_functions.md  control_lyapunov_functions.md  intro.md  lyapunov_theory.md  nagumos_invariance_principle.md
knowledge_compendium/controls/: pid.ipynb  pid_theory.md
knowledge_compendium/mapf/: intro.md  (+3 more)
notebooks/: CLF-CBF-QP-controller.ipynb  CLF-QP_controller.ipynb  cnn_pytorch_astar.ipynb  diff_drive_CLF-CBF-controller.ipynb  gymnasium_exploration.ipynb  k_nearest_neighbors.ipynb  pandas.ipynb  pytorch_basics.ipynb  reinforcement_learning_basics.ipynb  tensorboard_tutorial.ipynb
playground/: MPC-CBF-diff-drive.ipynb  MPC-diff-drive.ipynb  Pogema_Tutorial.ipynb  algorithms.ipynb  bigram_model.ipynb  bollinger_band_strategy.ipynb  cnn_pytorch_astar.ipynb  diff_drive_CLF-CBF-controller.ipynb  gpt.py  gpt_model.ipynb  k_nearest_neighbors.ipynb  pibt_in_pogema.ipynb  reinforcement_learning_basics.ipynb  understanding_rust_ownership.ipynb
server/: README.md  manage_containers_service.py
(+55 files in other folders)
