[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datasets"
version = "0.1.0"
description = "A Python package for dataset loading and preprocessing"
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools]
packages = ["datasets", "datasets.astar_dataset"]
